RW-11274 Fix issues and tests